--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "node_modules/lothar-postprocessor-analyse"]
 	path = node_modules/lothar-postprocessor-analyse
 	url = https://github.com/feather-team/lothar-postprocessor-analyse.git
+[submodule "node_modules/lothar-postpackager-runtime"]
+	path = node_modules/lothar-postpackager-runtime
+	url = https://github.com/feather-team/lothar-postpackager-runtime.git
+[submodule "node_modules/lothar-command-init"]
+	path = node_modules/lothar-command-init
+	url = https://github.com/feather-team/lothar-command-init.git
+[submodule "node_modules/lothar-potpackager-position"]
+	path = node_modules/lothar-potpackager-position
+	url = https://github.com/feather-team/lothar-postpackager-position.git
+[submodule "node_modules/lothar-preprocessor-label-analyse"]
+	path = node_modules/lothar-preprocessor-label-analyse
+	url = https://github.com/feather-team/lothar-preprocessor-label-analyse.git
